tests/negative/gold/bad-export-test.gold
tests/negative/bad-export4.toit:7:8: error: Unresolved export 'foo'
export foo
       ^~~
tests/negative/bad-export3.toit:7:8: error: Unresolved export 'foo'
export foo
       ^~~
tests/negative/bad-export2.toit:7:8: error: Unresolved export 'foo'
export foo
       ^~~
tests/negative/bad-export-test.toit:8:3: error: Unresolved identifier: 'foo'
  foo
  ^~~
Compilation failed
